--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
   <head>
     <title>Tatum's Travel Blog</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1 id="main-title">Tatum's Travel Blog</h1>
+    <header style = 'color:white'>
+      <h1 id="main-title"; style="color: white;">Tatum's Travel Blog</h1>
       <p>Tatums Terrific Tales of Tons of Things Travel</p>
-  </header>
+
+
+    </header>
 
     <main>
-      <h3>Daily Entries</h3>
+      <h3 id="sub-title">Daily Entries</h3>
 
       <article>
         <h3 class="subheading">Day 1 - The Eiffel Tower</h3>
